--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -3,39 +3,61 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="20dp"
     >
 
-    <TextView
-        android:id="@+id/tv_meeting_speech"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <EditText
+        android:id="@+id/et_meeting_speech"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/rl_button_container"
+        android:layout_marginBottom="10dp"
+        android:gravity="top|start"
+        android:inputType="none"
+        android:cursorVisible="false"
+        android:longClickable="false"
+        android:focusable="false"
+        android:clickable="false"
+        android:scrollbars="vertical"
         />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/rl_button_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/btn_save"
+        android:paddingBottom="15dp"
+        android:paddingStart="40dp"
+        android:paddingEnd="40dp"
         >
-        <Button
+
+        <ImageButton
+            android:id="@+id/btn_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/button_pause_selector"
+            android:contentDescription="@string/pause"
+            />
+
+        <ImageButton
             android:id="@+id/btn_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/start">
-        </Button>
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/button_start_selector"
+            android:contentDescription="@string/start"
+            />
 
-        <Button
-            android:id="@+id/btn_stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/stop">
-        </Button>
-    </LinearLayout>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_save"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
-
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/save"
+        />
 
 </RelativeLayout>
