--- a/app/src/main/res/layout/record_item_recycler.xml
+++ b/app/src/main/res/layout/record_item_recycler.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
@@ -15,17 +15,21 @@
         android:id="@+id/tv_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-        android:textSize="22sp"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/tv_item_date"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="8dp"
+        android:textSize="20sp"
         />
 
     <TextView
         android:id="@+id/tv_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
         android:singleLine="true"
         android:textColor="#BDBDBD"
         />
 
-</LinearLayout>
+</RelativeLayout>
